--- a/backend/hostit-storage/src/main/resources/application.properties
+++ b/backend/hostit-storage/src/main/resources/application.properties
@@ -20,7 +20,7 @@ logging.level.org.springframework.web=INFO
 logging.level.org.hibernate.SQL=DEBUG
 
 #spring.datasource.url=jdbc:mariadb://db-storage:3306/hostit_storage
-spring.datasource.url=jdbc:mariadb://localhost:3306/hostit_storage
+spring.datasource.url=jdbc:mariadb://db-storage:3306/hostit_storage
 spring.datasource.username=root
 spring.datasource.password=root
 spring.h2.console.enabled=true
@@ -31,6 +31,7 @@ spring.servlet.multipart.max-request-size=500MB
 #minio.url=http://192.168.129.101:9000
 #minio.host.address=http://192.168.129.101:9000
 
+#minio.host.address=https://7930-91-180-56-113.ngrok-free.app
 minio.host.address=http://localhost:9000
 minio.bucketName=hostit
 
