--- a/backend/hostit-storage/src/main/resources/application.properties
+++ b/backend/hostit-storage/src/main/resources/application.properties
@@ -20,7 +20,7 @@ logging.level.org.springframework.web=INFO
 logging.level.org.hibernate.SQL=DEBUG
 
 #spring.datasource.url=jdbc:mariadb://db-storage:3306/hostit_storage
-spring.datasource.url=jdbc:mariadb://db-storage:3306/hostit_storage
+spring.datasource.url=jdbc:mariadb://localhost:3306/hostit_storage
 spring.datasource.username=root
 spring.datasource.password=root
 spring.h2.console.enabled=true
