--- a/backend/hostit-storage/src/main/resources/application.properties
+++ b/backend/hostit-storage/src/main/resources/application.properties
@@ -1,26 +1,14 @@
 
 spring.application.name=hostit-storage
 server.port=8001
-#server.addres=10.2.101.47
-
-# JPA/Hibernate properties (if needed)
+spring.jpa.database-platform=org.hibernate.dialect.MariaDBDialect
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.sql.init.mode=always
 spring.jpa.open-in-view=false
-# Spring Security properties
-# Define properties for security configurations if necessary
-
-# OAuth2 properties
-# Define properties for OAuth2 configurations if necessary
-
-# Logging configuration
 logging.level.org.springframework.web=INFO
 logging.level.org.hibernate.SQL=DEBUG
-
-#spring.datasource.url=jdbc:mariadb://db-storage:3306/hostit_storage
-spring.datasource.url=jdbc:mariadb://db-storage:3306/hostit_storage
 spring.datasource.username=root
 spring.datasource.password=root
 spring.h2.console.enabled=true
@@ -32,7 +20,7 @@ spring.servlet.multipart.max-request-size=500MB
 #minio.host.address=http://192.168.129.101:9000
 
 #minio.host.address=https://7930-91-180-56-113.ngrok-free.app
-minio.host.address=http://localhost:9000
+
 minio.bucketName=hostit
 
 #minio.accessKey=4M7rgN40Zj9PPQpIlRD2
@@ -62,3 +50,5 @@ minio.secretKey=minioadmin
 # Max Request Size
 #spring.servlet.multipart.max-request-size=10MB
 
+minio.host.address=http://*****:9000
+spring.datasource.url=jdbc:mariadb://*****:3306/hostit_storage
